--- a/smart-invoice/src/app/globals.css
+++ b/smart-invoice/src/app/globals.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 @variant dark (&:is(.dark *));
+
+.playfair-display-500 {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
 
 .poppins-thin {
   font-family: var(--font-poppins), sans-serif;
